# AutoC2X-OC

./: .gitignore  CMakeLists.txt  README  README.md  mcm_test.pcap
autoware/: AutowareService.cpp  AutowareService.h  CAMmemo  CMakeLists.txt
autoware/message_formats/: DetectedObjectsArray.js
autoware/src/: AutowareService.cpp  AutowareService.h  AutowareServiceReceiver.cpp  AutowareServiceReceiver.h  AutowareServiceSender.cpp  AutowareServiceSender.h  CMakeLists.txt  SerialPort.cpp  SerialPort.h  topic_listener.cpp
autoware/src/org/: AutowareService.cpp.org  AutowareService.cpp.org.new  AutowareService.h.org  AutowareService.h.org.new
autoware/src/org/ros_ws/devel/: .catkin  .rosinstall  setup.sh
autoware/src/org/ros_ws/devel/lib/comp_tutorial/: listener
autoware/src/org/ros_ws/devel/lib/pkgconfig/: comp_tutorial.pc
autoware/src/org/ros_ws/devel/share/comp_tutorial/cmake/: comp_tutorialConfig.cmake
autoware/src/org/ros_ws/src/comp_tutorial/: CMakeLists.txt  package.xml
autoware/src/org/ros_ws/src/comp_tutorial/src/: topic_listener.cpp
cam/src/: CMakeLists.txt  caservice.cpp  caservice.h  caserviceReceiver.cpp  caserviceReceiver.h  caserviceSender.cpp
common/asn1/: AccelerationConfidence.c  AccelerationConfidence.h  AccelerationControl.c  AccelerationControl.h  AccidentSubCauseCode.c  AccidentSubCauseCode.h  ActionID.c  ActionID.h  AdverseWeatherCondition-AdhesionSubCauseCode.c  AdverseWeatherCondition-AdhesionSubCauseCode.h  AdverseWeatherCondition-ExtremeWeatherConditionSubCauseCode.c  AdverseWeatherCondition-ExtremeWeatherConditionSubCauseCode.h  AdverseWeatherCondition-PrecipitationSubCauseCode.c  AdverseWeatherCondition-PrecipitationSubCauseCode.h  AdverseWeatherCondition-VisibilitySubCauseCode.c  AdverseWeatherCondition-VisibilitySubCauseCode.h  AlacarteContainer.c  AlacarteContainer.h  Altitude.c  Altitude.h  AltitudeConfidence.c  AltitudeConfidence.h  AltitudeValue.c  AltitudeValue.h  BasicContainer.c  BasicContainer.h  BasicVehicleContainerHighFrequency.c  BasicVehicleContainerHighFrequency.h  BasicVehicleContainerLowFrequency.c  BasicVehicleContainerLowFrequency.h  CAM.c  CAM.h  CMakeLists.txt  CamParameters.c  CamParameters.h  CauseCode.c  CauseCode.h  CauseCodeType.c  CauseCodeType.h  CenDsrcTollingZone.c  (+287 more)
common/buffers/: AbendContainer.proto  AcceptanceContainer.proto  AckContainer.proto  AcknowledgementContainer.proto  CMakeLists.txt  CancelContainer.proto  FinContainer.proto  HeartbeatContainer.proto  IntentionReplyContainer.proto  ManeuverContainer.proto  (+15 more)
config/: CMakeLists.txt  openc2x_autoware  openc2x_cam  openc2x_mcm
mcm/src/: CMakeLists.txt  mcserviceReceiver.cpp  mcserviceReceiver.h  mcserviceSender copy.h  mcserviceSender.cpp  mcserviceSender.h
scripts/: deleteLogs.sh  logCPULoad.sh  logMem.sh  ping.txt  runOpenC2X.sh  setupOpenC2X.sh
(+15 files in other folders)
